@@ -33,7 +33,9 @@ export(Module,
        cpp_object_initializer,
        cpp_object_dummy,
        Rcpp.plugin.maker,
-       getRcppVersion
+       getRcppVersion,
+       asisTangle,
+       asisWeave
        )
 S3method(print, bytes)
 S3method(format, Rcpp_stack_trace)
